# app/controllers/api/v1/automatic_post_offices_controller.rb
@@ -16,12 +16,10 @@ module Api
         @filename = "#{Time.zone.now.strftime('%Y-%m-%d_%H:%M:%S')}_automatic_post_offices.xlsx"
 
         list = @collection.includes(:placement_object_type, :district)
-        if list.count > 0
-          file = XlsxGenerator::AutomaticPostOffices.call(list:, filename: @filename)
-          send_data(file.to_stream.read, filename: @filename)
-        else
-          raise ActiveRecord::RecordNotFound
-        end
+        raise ActiveRecord::RecordNotFound unless list.count.positive?
+
+        file = XlsxGenerator::AutomaticPostOffices.call(list:, filename: @filename)
+        send_data(file.to_stream.read, filename: @filename)
       ensure
         File.delete(@filename) if File.exist?(@filename)
       end
@@ -46,7 +44,7 @@ module Api
       end
 
       def filter_params
-        params.permit(:area_id, :district_id, :placement_object_type_id, :is_placed)
+        params.permit(:area_id, :district_id, :placement_object_type_id, :is_placed, ids: [])
       end
 
       def order_params
